--- a/src/component/Calculator.css
+++ b/src/component/Calculator.css
@@ -2,8 +2,25 @@ button {
   width: 3em;
   height: 3em;
   border: 1px solid #aaa;
-  margin: 0.1em;
+  margin: 0.05em;
   font-size: 1.6em;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.result-container {
+  width: 19.7em;
+  margin-left: 2.5em;
+}
+
+.result {
+  background-color: #a9a9a9;
+  margin: 0;
+  padding: 0.5em;
+  display: flex;
+  justify-content: end;
 }
 
 .btn-orange {
@@ -12,4 +29,9 @@ button {
 
 .btn-grey {
   background-color: #dcdcdc;
+}
+
+.btn-large {
+  width: 6em;
+  margin-right: 0.1em;
 }
